Updates from Overleaf

--- a/thesis/paper/sections/2_relatedWork.tex
+++ b/thesis/paper/sections/2_relatedWork.tex
@@ -8,7 +8,7 @@ This section explores and discusses the state-of-the-art research, tools, and te
 
 A UIDL can be defined as having two separate parts: a syntax that describes the user interface characteristics, and semantics that defines what these characteristics mean. They share the common goal of describing a UI without targeting any particular programming language or platform; nevertheless, the end-goal of UIDLs often varies \cite{XMLCompliantUIDLs}. UIDLs typically use XML or a similar markup language/notation that later gets transpiled into a programming language or is processed by a software to be automatically or semi-automatically translated into a UI, a visualisation, or any byproduct depending on the goal of the project. A UIDL can be thought of as a tool designed to achieve a particular goal or a common goal in a particular way. 
 
-Souchon et al., \cite{XMLCompliantUIDLs}, and later Guerrero-Garcia et al. \cite{UIDLTheoreticalSurvey} argued \textit{"there is a plethora of UIDLs that are widely used, with different goals and different strengths"}. There are many ways of classifying and categorising existing UIDLs, as can be seen in \cite{XMLCompliantUIDLs} and \cite{UIDLTheoreticalSurvey}. However, in this section, to stay relevant to the comparison to Intertext, we group UIDLs under two main categories: compiled and interpreted UIDLs. Almost all existing IUIDLs falls under the first category, allowing us to focus on the general picture instead of on a case-by-case basis.
+Souchon et al., \cite{XMLCompliantUIDLs}, and later Guerrero-Garcia et al. \cite{UIDLTheoreticalSurvey} argued \textit{there is a plethora of UIDLs that are widely used, with different goals and different strengths}. There are many ways of classifying and categorising existing UIDLs, as can be seen in \cite{XMLCompliantUIDLs} and \cite{UIDLTheoreticalSurvey}. However, in this section, to stay relevant to the comparison to Intertext, we group UIDLs under two main categories: compiled and interpreted UIDLs. Almost all existing IUIDLs falls under the first category, allowing us to focus on the general picture instead of on a case-by-case basis.
 
 \subsubsection{Compiled UIDLs}
 
