--- a/thesis/paper/sections/3_solution.tex
+++ b/thesis/paper/sections/3_solution.tex
@@ -3,7 +3,7 @@
 \chapter{Solution} \label{solution}
 
 
-Intertext is a platform based on a straightforward premise; it is a family of applications that can interpret IUIDL, an XML based UI description language, and generate appropriate front-ends for the host platform on the fly. Simply put, a developer wanting to create a front-end application uses a generic backend to generate IUIDL, and serve it from an endpoint, say at \texttt{https://intertext.example.com}. Users who wish to use this application use an Intertext client on their preferred device or environment and visit this domain just like in any web browser. The Intertext client then makes a request to this domain, fetches the IUIDL served by this endpoint and generates the user interface as per the instructions received via IUIDL. (Fig ~\ref{fig:how_intertext_works})
+Intertext is a platform based on a straightforward premise; it is a family of applications that can interpret IUIDL, an XML based UI description language, and generate appropriate front-ends for the host platform on the fly. Simply put, a developer wanting to create a front-end application uses a generic backend to generate IUIDL, and serve it from an endpoint, say at \texttt{https://intertext.example.com}. Users who wish to use this application use an Intertext client on their preferred device or environment and visit this domain just like in any web browser. The Intertext client then makes a request to this domain, fetches the IUIDL served by this endpoint and generates the user interface as per the instructions received via IUIDL as shown in Figure ~\ref{fig:how_intertext_works}.
 
 
 Rather than rendering a simple static view, Intertext performs some tasks such as accepting user input, navigating to different screens, making additional requests to fetch more data, keeping the UI updated and reading and writing some data to users local storage; all of which is again orchestrated based on the instructions received by the backend in IUIDL syntax.
@@ -87,7 +87,7 @@ Last but not least, this principle was crucial to achieve cross-device compatibi
 
 We designed IUIDL to be a generic markup language, agnostic of any platform or interaction type, and be based purely on XML so it could be consumed by all clients. This approach has many advantages, both for developers and users. It allows developers to create universal applications; once they start serving an Intertext application through an endpoint, any Intertext endpoint can consume the application through that endpoint. Moreover, it helps creating a continual experience for the user; given that there is a shared layout system, UI elements will look and feel the same between Intertext clients.
 
-Also, this approach allows existing Intertext applications to adopt to new Intertext clients as they are built in the future. At the time of this paper, Intertext web client and command-line client is ready, but as mentioned in the \nameref{futureWork} section, more Intertext clients are on the way. Thanks to this principle, Intertext clients will have immediate availability for the upcoming Intertext clients.
+Also, this approach allows existing Intertext applications to adopt to new Intertext clients as they are built in the future. At the time of writing this paper, only the Intertext web client is ready, but as mentioned in the \nameref{futureWork} section, more Intertext clients are on the way. Thanks to this principle, Intertext clients will have immediate availability for the upcoming Intertext clients.
 
 \section{Intertext UIDL} \label{intertextUIDL}
 
@@ -231,7 +231,7 @@ When it comes to building UIs, XML and XML-like languages are very common. The m
 \end{figure}
 
 
-One issue that raised from the XML syntax was the inability to assign complex children to attributes of a specific tag. As it can be seem from the JSON representation of the 404 page in Figure \ref{fig:syntax_json}, the component \texttt{collapse} requires two sets of children: one for its direct children (specified as \texttt{collapse}), and one for the children to be rendered in its handle (specified as \texttt{handle}). Both \texttt{collapse} and \texttt{handle} properties take other UI components as their children. However, the XML syntax only allows attribute values of a tag to be of type string. In order to solve this problem, we extended XML to create a special syntax to handle such cases. We introduced a special tag name convention: when an XML tree is placed as the children of a component with the tag name being the parent components name concatenated with an attribute name joined together with a dot ("."), it gets interpreted as an attribute of the parent, with its value being the children of that XML tree (Figure \ref{fig:complex_attributes}).
+One issue that raised from the XML syntax was the inability to assign complex children to attributes of a specific tag. As it can be seem from the JSON representation of the 404 page in Figure \ref{fig:syntax_json}, the component \texttt{collapse} requires two sets of children: one for its direct children (specified as \texttt{collapse}), and one for the children to be rendered in its handle (specified as \texttt{handle}). Both \texttt{collapse} and \texttt{handle} properties take other UI components as their children. However, the XML syntax only allows attribute values of a tag to be of type string. In order to solve this problem, we extended XML to create a special syntax to handle such cases. We introduced a special tag name convention: when an XML tree is placed as the children of a component with the tag name being the parent components name concatenated with an attribute name joined together with a dot (\dquote{.}), it gets interpreted as an attribute of the parent, with its value being the children of that XML tree as shown in Figure \ref{fig:complex_attributes}.
 
 \begin{figure}
 \begin{minipage}{\linewidth}
@@ -255,9 +255,9 @@ One issue that raised from the XML syntax was the inability to assign complex ch
 
 \subsection{Terminology}
 
-A last thing to mention in this section is the terminology used in IUIDL. The IUIDL syntax is shared between multiple devices and environments, which includes desktop interfaces as well as touch interfaces, non-graphical user interfaces and more. As mentioned in the \nameref{futureWork} section, as more Intertext clients gets released, the variety will further increase. This brings up a problem with the terminology. For instance, the \texttt{click} that normally would make sense for a desktop environment does not make sense for touch interfaces, as the interaction for a touch screen interface would be \texttt{touch} or \texttt{tap}. In the case of a command line, the primary interaction is focusing on an item and hitting the "enter" key. 
+A last thing to mention in this section is the terminology used in IUIDL. The IUIDL syntax is shared between multiple devices and environments, which includes desktop interfaces as well as touch interfaces, non-graphical user interfaces and more. As mentioned in the \nameref{futureWork} section, as more Intertext clients gets released, the variety will further increase. This brings up a problem with the terminology. For instance, the \texttt{click} that normally would make sense for a desktop environment does not make sense for touch interfaces, as the interaction for a touch screen interface would be \texttt{touch} or \texttt{tap}. In the case of a command-line interface, the primary interaction is focusing on an item and hitting the \texttt{enter} key. 
 
-Our immediate reaction to solve this problem was to create custom jargon that is agnostic of device/interaction type, just like IUIDL is by nature, and find terms for every component/interaction that applies globally. For instance, instead of "button" we used \texttt{callToAction}, and instead of \texttt{onClick} we used \texttt{onPrimaryInteraction}. However we later abandoned this approach for the sake of developer friendliness. As we custom-named components and their respective actions, we realised that their names were getting very unusual and non-familiar, to a point where it was very difficult to even recognise them. Should we have chosen the global naming convention, we would have introduced a steep learning curve; developers would have needed to get familiar with a long list of terms that they have never heard of before, and they would strictly need to follow the documentation while building Intertext applications.
+Our immediate reaction to solve this problem was to create custom jargon that is agnostic of device/interaction type, just like IUIDL is by nature, and find terms for every component/interaction that applies globally. For instance, instead of \texttt{button} we used \texttt{callToAction}, and instead of \texttt{onClick} we used \texttt{onPrimaryInteraction}. However we later abandoned this approach for the sake of developer friendliness. As we custom-named components and their respective actions, we realised that their names were getting very unusual and non-familiar, to a point where it was very difficult to even recognise them. Should we have chosen the global naming convention, we would have introduced a steep learning curve; developers would have needed to get familiar with a long list of terms that they have never heard of before, and they would strictly need to follow the documentation while building Intertext applications.
 
 Instead, we decided to adopt the terminology for desktop/web environments. The rationale behind this decision was that these environments have been around for a very long time, that the terms used to build desktop applications and web applications has a strong recognition among many developers. Also, terms used for desktop environments were mostly generic enough that it was easy to represent on other environments. For instance, a \texttt{button} is a component to be interacted with that performs an action, and \texttt{click} is the method of primary interaction with that component. We can easily take this as a given to replicate it on any environment and create an optimised version taking the limitations of the host platforms in mind.
 
@@ -267,7 +267,7 @@ Intertext clients are the user facing products of Intertext, that build the brid
 
 For example, on mobile platforms such as iOS and Andriod, UI elements would be larger and more suitable for touch interactions. Primary interaction would be translated as \texttt{tap} while secondary interactions, if any, would be translated as \texttt{tap and hold}. The layout would adjust itself based on the screen size. The client would be implemented with either native technologies such as Swift/Objective-C for iOS and Kotlin/Java for Android, or with hybrid technologies that gets compiled into native code, such as React Native or Flutter for maximum responsiveness and efficiency. 
 
-At the time of this paper, a web client and a command-line client is implemented. Native clients for iOS and Android, and desktop clients for Mac OS, Windows and several Linux distributions are among the ones that are planned, more could be found in \nameref{futureWork} section.
+At the time of writing this paper, only a web client has been implemented. A command-line client, native clients for iOS and Android, and desktop clients for Mac OS, Windows and several Linux distributions are among the ones that are planned, more could be found in \nameref{futureWork} section.
 
 Intertext clients consists of two main parts; components and commands. Each Intertext client implement these separately, based on the host platform and its capabilities. Each client also implements the  their own local storage, state management strategy, and communication technique with the server.
 
@@ -275,7 +275,7 @@ Intertext clients consists of two main parts; components and commands. Each Inte
 
 Components are anything that has a visual representation. All component stem from a generic IUIDL definition, and is interpreted based on the host platform requirements. They can be organisational or presentational. Organisational components are the layout components, they are used to position presentational components on the screen. Intertext implements a version of css flexbox specification as a layout system, which could be used to implement responsive interfaces for all screen sizes. For non browser-based platforms, we use the popular Yoga layout engine, which is a standalone implementation of the css flexbox specification in C++, allowing us to target almost any platform. More details on the layout system is given in \nameref{implementation} section.
 
-Most presentational Intertext components share a concept, "intent", which is a way to communicate the intention of the UI element based on its use-case. Intertext clients renders the UI elements differently based on its intent, allowing a way for the developer to convey an intention of an UI element to the user without being able to intercept with the styles. For instance, an error message could be shown in a block component that has the intent "error", and it will be rendered with a red background, indicating to the user that it is an error message. Figure \ref{fig:intents} shows an example of intents on block component for Intertext web client.
+Most presentational Intertext components share a concept, \texttt{intent}, which is a way to communicate the intention of the UI element based on its use-case. Intertext clients renders the UI elements differently based on its intent, allowing a way for the developer to convey an intention of an UI element to the user without being able to intercept with the styles. For instance, an error message could be shown in a block component that has the intent \texttt{error}, and it will be rendered with a red background, indicating to the user that it is an error message. Figure \ref{fig:intents} shows an example of intents on block component for Intertext web client.
 
 \begin{figure}
   \centering
