--- a/thesis/paper/sections/6_discussion.tex
+++ b/thesis/paper/sections/6_discussion.tex
@@ -45,7 +45,7 @@ In the \nameref{researchQuestions} section we presented the questions that we ai
   \begin{enumerate}
     \item \underline{ eliminates the need to create accessible front-end applications ?}
 
-    As we have already established, IUIDL is agnostic of the view layer. Using IUIDL, developers do not implement "actual UI elements", they implement descriptions of a UI. Intertext clients are responsible for interpreting and rendering these descriptions in an accessible manner. The accessibility implementations are already handled, without needing any further action from the developer.
+    As we have already established, IUIDL is agnostic of the view layer. Using IUIDL, developers do not implement \dquote{actual UI elements}, they implement descriptions of a UI. Intertext clients are responsible for interpreting and rendering these descriptions in an accessible manner. The accessibility implementations are already handled, without needing any further action from the developer.
     
     \item \underline{eliminates the need to create front-end applications for every} \newline \underline{device/platform ?}
 
