--- a/thesis/paper/sections/7_appendix.tex
+++ b/thesis/paper/sections/7_appendix.tex
@@ -1,2 +1,23 @@
 \chapter{Appendix} \label{App:AppendixA}
 \addtocontents{toc}{\protect\setcounter{tocdepth}{0}}
+
+\section{Source Codes}
+
+\begin{itemize}
+    \item Intertext source code: \url{https://github.com/oguzgelal/intertext}
+    
+    \item RecipeApp demo source code: \url{https://github.com/oguzgelal/intertext-backend-demo}
+\end{itemize}
+
+
+
+\section{State of JS 2020}
+
+\begin{itemize}
+    \item Raw data: \url{https://www.kaggle.com/sachag/state-of-js}
+    \item Code used to analyse the data: \url{https://gist.github.com/oguzgelal/8032e0b92077d4b2be909061d6182cdc}
+\end{itemize}
+
+
+
+ 
