--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -13,6 +13,7 @@
 \usepackage{float}
 \usepackage{template/cisa}
 \usepackage{tcolorbox}
+\usepackage{xurl}
 
 \input{thesis/paper/utils/json-lang}
 \input{thesis/paper/utils/xml-lang}
