Updates from Overleaf

--- a/thesis/paper/sections/7_appendix.tex
+++ b/thesis/paper/sections/7_appendix.tex
@@ -9,8 +9,6 @@
     \item RecipeApp demo source code: \url{https://github.com/oguzgelal/intertext-backend-demo}
 \end{itemize}
 
-
-
 \section{State of JS 2020}
 
 \begin{itemize}
@@ -19,5 +17,46 @@
 \end{itemize}
 
 
+\section{Evaluation}
 
+\subsection{Phase 1}
+
+Demographics
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=13cm]{thesis/paper/images/p1_age.pdf}
+  \textbf{Age distribution}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=13cm]{thesis/paper/images/p1_gender.pdf}
+  \textbf{Gender distribution}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=13cm]{thesis/paper/images/p1_country.pdf}
+  \textbf{Country of Origin}
+\end{figure}
+
+Advertisement
  
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=13cm]{thesis/paper/images/p1_q4.pdf}
+  \textbf{Question:} I use an AdBlocker
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=13cm]{thesis/paper/images/p1_q5.pdf}
+  \textbf{Question:} I'm often frustrated with ads on the internet
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=13cm]{thesis/paper/images/p1_q6.pdf}
+  \textbf{Question:} I'm often frustrated with ads on mobile/desktop apps
+\end{figure}
