--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -14,6 +14,7 @@
 \usepackage{template/cisa}
 \usepackage{tcolorbox}
 \usepackage{xurl}
+\usepackage{pgf-pie} 
 
 \input{thesis/paper/utils/json-lang}
 \input{thesis/paper/utils/xml-lang}
@@ -22,7 +23,7 @@
 \author{Oguz Gelal}
 \level{ma2}
 \title{Intertext}
-\subtitle{The Everything App}
+\subtitle{Towards a Secure and Platform Agnostic Front-end Ecosystem}
 \promotor{Prof. Dr. Beat Signer}                                                         
 \advisors{Prof. Dr. Beat Signer}
 \academicyear{2020}{2021}
