--- a/thesis/paper/sections/5_evaluation.tex
+++ b/thesis/paper/sections/5_evaluation.tex
@@ -54,11 +54,11 @@ For the time being, only the web client of Intertext is fully implemented. There
   \label{fig:rec_signin_signup}%
 \end{figure}
 
-First, user visits the URL the RecipeApp is served from via the address bar above. In figure \ref{fig:rec_signin_signup} the example server runs on \texttt{http://localhost:3000} and the endpoint RecipeApp is served from is \texttt{/recipes}. If user is not already signed in, they will be redirected to \texttt{/recipes/signin}. After signing in from this screen, they will be redirected back to the application. If they were visiting a particular URL such as \texttt{/recipes/new} or \texttt{/recipes/3} before they got redirected to the sign in screen, they will be redirected back to that screen after signing in. Once they are signed in, they will be presented with the recipe list. Recipe list has two view options, grid view and list view, which user can chose between. The view selection will persist across sessions. Moreover, the list features a search bar, which can be used to search recipes by keywords. On each recipe item, there difficulty and time it takes to prepare the recipe is displayed along with an image. From the top navigation, user can click on the Add Recipe button to go to the insert page. From there, they can insert their own recipe.
+First, user visits the URL the RecipeApp is served from via the address bar above. In figure~\ref{fig:rec_signin_signup} the example server runs on \texttt{http://localhost:3000} and the endpoint RecipeApp is served from is \texttt{/recipes}. If user is not already signed in, they will be redirected to \texttt{/recipes/signin}. After signing in from this screen, they will be redirected back to the application. If they were visiting a particular URL such as \texttt{/recipes/new} or \texttt{/recipes/3} before they got redirected to the sign in screen, they will be redirected back to that screen after signing in. Once they are signed in, they will be presented with the recipe list. Recipe list has two view options, grid view and list view, which user can chose between. The view selection will persist across sessions. Moreover, the list features a search bar, which can be used to search recipes by keywords. On each recipe item, there difficulty and time it takes to prepare the recipe is displayed along with an image. From the top navigation, user can click on the Add Recipe button to go to the insert page. From there, they can insert their own recipe.
 
 \subsection{Authentication}
 
-Before the authentication, first thing to understand is how we implemented the redirection system. The redirect screen, which can be seen in figure \ref{fig:rec_redirect}, is essentially an handlebars template that can be rendered with some parameters and can be used for different purposes. There are two essential functions of this screen; it instructs Intertext client to store some data, and to redirect user to another endpoint. The parameters changes based on the user case.
+Before the authentication, first thing to understand is how we implemented the redirection system. The redirect screen, which can be seen in figure~\ref{fig:rec_redirect}, is essentially an handlebars template that can be rendered with some parameters and can be used for different purposes. There are two essential functions of this screen; it instructs Intertext client to store some data, and to redirect user to another endpoint. The parameters changes based on the user case.
 
 \begin{figure}[htb]
   \centering
@@ -88,7 +88,7 @@ The redirect screen does two things: it instructs the client to store a variable
 
 \subsection{Recipe List}
 
-The recipes view features a list of the recipes. As seen in in figure \ref{fig:rec_recipe_list}, it has several components: recipe title, description, difficulty and time to cook details that are displayed in tags, and a read more button to navigate to the recipe page. The difficulty tags are made of the \texttt{block} component, and they use intents to hint the difficulty of the recipe. The view has two display options, a list view and a grid view. It also has a search input to search recipes.
+The recipes view features a list of the recipes. As seen in in figure~\ref{fig:rec_recipe_list}, it has several components: recipe title, description, difficulty and time to cook details that are displayed in tags, and a read more button to navigate to the recipe page. The difficulty tags are made of the \texttt{block} component, and they use intents to hint the difficulty of the recipe. The view has two display options, a list view and a grid view. It also has a search input to search recipes.
 
 \begin{figure}[htb]
   \centering
@@ -99,7 +99,7 @@ The recipes view features a list of the recipes. As seen in in figure \ref{fig:r
   \label{fig:rec_recipe_list}%
 \end{figure}
 
-Both the input and display preference options work in the same way, by modifying the front-end state and triggering a request to the backend to pick up the modified state. As user types into the text input, Intertext client automatically saves its value into the state that gets passed on to the backend on every request. The \dquote{Search} button next to the search input only triggers a request to the \texttt{/recipes} endpoint. The recipes endpoint receives the query in the search input, and filters the results accordingly. It also pre-populates the input value by passing the query as a children to the \texttt{input} component. The display options on the other hand first sets the front-end state variable \texttt{layout} to either \texttt{grid} or \texttt{list}, and again triggers a request to the same \texttt{recipes} endpoint as seen in figure \ref{fig:rec_display_options}. The backend picks up the variable and renders the different version of the displays accordingly. The primary color of the button for the active display option is also controlled by the same \texttt{layout} variable, backend renders the buttons with the relevant intent based on that variable also as seen in figure \ref{fig:rec_display_options}.
+Both the input and display preference options work in the same way, by modifying the front-end state and triggering a request to the backend to pick up the modified state. As user types into the text input, Intertext client automatically saves its value into the state that gets passed on to the backend on every request. The \dquote{Search} button next to the search input only triggers a request to the \texttt{/recipes} endpoint. The recipes endpoint receives the query in the search input, and filters the results accordingly. It also pre-populates the input value by passing the query as a children to the \texttt{input} component. The display options on the other hand first sets the front-end state variable \texttt{layout} to either \texttt{grid} or \texttt{list}, and again triggers a request to the same \texttt{recipes} endpoint as seen in figure~\ref{fig:rec_display_options}. The backend picks up the variable and renders the different version of the displays accordingly. The primary color of the button for the active display option is also controlled by the same \texttt{layout} variable, backend renders the buttons with the relevant intent based on that variable also as seen in figure~\ref{fig:rec_display_options}.
 
 \begin{figure}[htb]
 \begin{minipage}{\linewidth}
@@ -153,67 +153,76 @@ In our likert scale questions, we focused on the trade-offs in order to get answ
 
 \subsection{Phase 1 Results}
 
-In the first phase, we received 119 responses (after filtering out duplicate answers and answers with invalid worker ids). Our results for the first phase are very positive, we were able to validate the problem and implement Intertext with more confidence. First three graphs shows age distribution, gender and country of origin of the respondents, and the ones that follows shows the responses given to each question alongside the question text underneath.
+In the first phase, we received 119 responses (after filtering out duplicate answers and answers with invalid worker ids). Information about participant demographics can be found in the \nameref{App:AppendixA}. Our results for the first phase are very positive, we were able to validate the problem and implement Intertext with more confidence.
+
+% ------ ui / ux
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_age.pdf}
-  \textbf{Age distribution}
+\centering
+\begin{tikzpicture}
+
+\pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{10.9/,50.4/,28.6/,8.4/,1.7/}
+
+\pie[radius=2,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
+      16.8/Strongly agree,
+      49.6/Agree,
+      22.7/Neutral,
+      10.1/Disagree,
+      0.8/Strongly disagree}
+
+\end{tikzpicture}
+\vspace*{-5mm}
+\caption{\newline\textit{I experience UI/UX inconsistencies in some applications} (left)\newline\textit{I sometimes experience poor design in some applications} (right)} \label{fig:ev_p1_1}
 \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_gender.pdf}
-  \textbf{Gender distribution}
-\end{figure}
+Our first two questions focuses on how users perceives applications they use on a daily basis in terms of user experience or user interfaces. We asked participants whether they experience poor design or inconsistent user interfaces/user experiences, and most of them responded by stating that they experience some form of an issue, as it can be seen in figure~\ref{fig:ev_p1_1}.
+
+% ------ ads 
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_country.pdf}
-  \textbf{Country of Origin}
+\centering
+\begin{tikzpicture}
+
+\pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{12.6/,50.4/,21.0/,10.1/,5.9/}
+
+\pie[radius=2,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
+      19.3/Strongly agree,
+      33.6/Agree,
+      21.8/Neutral,
+      15.1/Disagree,
+      10.1/Strongly disagree}
+
+\end{tikzpicture}
+\vspace*{-5mm}
+\caption{\newline\textit{Advertisement sector is out of control} (left)\newline\textit{I would rather pay a small fee than seeing ads} (right)} \label{fig:ev_p1_2}
 \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q1.pdf}
-  \textbf{Question:} I experience UI/UX inconsistencies in some applications
-\end{figure}
+Next, we focused on advertisement, as it can be seen as one of the leading causes of frustration and a major aspect that hinders user experience for many users. As we expected, there is a strong opinion against advertisement. There seems to be a consensus that the advertisement sector is out of control, and more than 65\% of our participants stated that they use an ad blocking software. In order to understand the extent of the frustration, we asked whether participants would be willing to pay a small fee rather than seeing ads, more than half of our participants responded positively as it can be seen in figure~\ref{fig:ev_p1_2}. Detailed information on the responses related to advertisement can be found in the \nameref{App:AppendixA}.
+
+% ------ test
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q2.pdf}
-  \textbf{Question:} I sometimes experience poor design in some applications
+\centering
+\begin{tikzpicture}
+
+\pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{12.6/,50.4/,21.0/,10.1/,5.9/}
+
+\pie[radius=2,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
+      19.3/Strongly agree,
+      33.6/Agree,
+      21.8/Neutral,
+      15.1/Disagree,
+      10.1/Strongly disagree}
+
+\pie[pos={2.25,-3.9},radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{12.6/,50.4/,21.0/,10.1/,5.9/}
+
+\end{tikzpicture}
+\vspace*{-5mm}
+\caption{\newline\textit{Lorem ipsum dolor sit amet} (left)\newline\textit{Lorem ipsum dolor sit amet} (right)\newline\textit{Lorem ipsum dolor sit amet} (bottom)} \label{fig:ev_p1_test}
 \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q3.pdf}
-  \textbf{Question:} Advertisement sector is out of control
-\end{figure}
+% ------
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q4.pdf}
-  \textbf{Question:} I use an AdBlocker
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q5.pdf}
-  \textbf{Question:} I'm often frustrated with ads on the internet
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q6.pdf}
-  \textbf{Question:} I'm often frustrated with ads on mobile/desktop apps
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q7.pdf}
-  \textbf{Question:} I would rather pay a small fee than seeing ads
-\end{figure}
 
 \begin{figure}[H]
   \centering
